# starter

./: .gitignore  setup_kata.py
Kotlin/: .gitignore  README.md  settings.gradle
Kotlin/src/main/kotlin/codingdojo/: Sample.kt
Kotlin/src/test/kotlin/codingdojo/: SampleTest.kt
c/: CMakeLists.txt  README.md
c/src/: sample.c
c/test-cgreen/: CMakeLists.txt  main.c  sample.c
c/test-cmocka/: CMakeLists.txt  main.c
c/test-cmocka/sample_test/: CMakeLists.txt  sample_test.c
c/test-cmocka/simple_test/: CMakeLists.txt
c/test-cmocka/uptime/: CMakeLists.txt
c_texttest/: README.md
c_texttest/src/: sample.h
cpp/: CMakeLists.txt  README.md
cpp-approvals/: README.md
cpp-approvals/code/: YourCodeGoesHere.h
cpp-approvals/tests/: CMakeLists.txt
cpp/src/: sample.h
cpp/test/: sample_catch.cpp
cpp/test-doctest/: CMakeLists.txt
cpp/test-gtest/: CMakeLists.txt
csharp/: StarterProject.sln
csharp/Starter/: Class1.cs  Starter.csproj
csharp/StarterProject/: StarterNUnitTest.cs  StarterProject.csproj  StarterXUnitTest.cs
csharp/TestStarter/: StarterNUnitTest.cs  StarterVerifyNUnitTest.cs  StarterVerifyXUnitTest.cs  StarterXUnitTest.cs  TestStarter.csproj
erlang/: README.md
java/: pom.xml
java/src/main/java/org/sammancoaching/: Sample.java
java/src/test/java/codingdojo/: SampleApprovalTest.java
kotlin/: settings.gradle.kts
kotlin/Starter/: build.gradle.kts  settings.gradle.kts
kotlin/Starter/gradle/wrapper/: gradle-wrapper.properties
kotlin/src/test/kotlin/: StarterTest.kt
kotlin_old/: README.md
nodejs_jest/: README.md  package.json
php/: README.md  composer.json
php/src/: Sample.php
php/tests/: SampleTest.php
purescript/: README.md  package-lock.json  package.json  spago.dhall
purescript/test/: Main.purs
python/: .gitignore  README.md  pyproject.toml
python/tests/: __init__.py  test_something.py
typescript/: README.md  jest.config.js  package.json  tsconfig.json
typescript/src/: sample.ts
typescript/tests/: sample.spec.ts
(+2 files in other folders)
